--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 edition = "2021"
-name = "ant-leptos-example-basic"
+name = "basic"
 version = "0.1.0"
 
 [dependencies]
 ant-leptos = {path = "../.."}
-leptos = {version = "0.7.0-rc3", features = ["csr", "nightly"]}
+leptos = {version = "0.7.2", features = ["csr"]}
